--- a/swp_be.csproj
+++ b/swp_be.csproj
@@ -1,10 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>19aa3a97-4ee5-4f2d-8ae0-1655aa42ea2f</UserSecretsId>
+	 
   </PropertyGroup>
 
   <ItemGroup>
