--- a/appsettings.json
+++ b/appsettings.json
@@ -5,9 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "Jwt": {
-    "Issuer": "http://localhost:5000",
-    "Audience": "http://localhost:3000"
-  }
+  "AllowedHosts": "*"
 }
