--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,11 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
+# TODO: Delete this when ready
+Dockerfile
+compose.yml
+.dockerignore
+
 # User-specific files
 *.rsuser
 *.suo
