--- a/appsettings.json
+++ b/appsettings.json
@@ -6,8 +6,6 @@
     }
   },
   "AllowedHosts": "*",
-  "Jwt": {
-    "Issuer": "http://localhost:5213",
-    "Audience": "http://localhost:3000"
-  }
+  "BEUrl": "http://localhost:5213",
+  "FEUrl": "http://localhost:3000",
 }
