Add KoiInventory and ConsignmentPriceList model, update some models

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,10 @@
   },
   "AllowedHosts": "*",
   "BEUrl": "http://localhost:5213",
-  "FEUrl": "http://localhost:3000",
+  "FEUrl": "http://localhost:5173",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=KoiFish;User Id=sa;Password=12345;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
   "VNPay": {
     "vnp_TmnCode": "PBWG0UL8",
     // Whatever this is, it's just a dev test key
@@ -17,6 +20,6 @@
     //"vnp_apiUrl": "http://sandbox.vnpayment.vn/merchant_webapi/merchant.html",
     //"vnp_PayUrl": "http://sandbox.vnpayment.vn/paymentv2/vpcpay.html",
     //"vnp_RefundUrl": "http://sandbox.vnpayment.vn/merchant_webapi/merchant.html",
-    "vnp_Version": "2.1.0",
+    "vnp_Version": "2.1.0"
   }
 }
