--- a/appsettings.json
+++ b/appsettings.json
@@ -6,8 +6,8 @@
     }
   },
   "AllowedHosts": "*",
-  "BEUrl": "http://localhost:5213",
-  "FEUrl": "http://localhost:5173",
+  "BEUrl": "https://koishop.amayakuro.id.vn/",
+  "FEUrl": "https://swp-391-nine.vercel.app/",
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Database=KoiFish;User Id=sa;Password=12345;Trusted_Connection=True;TrustServerCertificate=True;"
   },
