change env for ubuntu

--- a/appsettings.json
+++ b/appsettings.json
@@ -16,7 +16,7 @@
     // Whatever this is, it's just a dev test key
     "vnp_HashSecret": "BDF43SZ02ZCG178PP7SY39RGA6UB5JSP",
     "vnp_Url": "http://sandbox.vnpayment.vn/paymentv2/vpcpay.html",
-    "vnp_ReturnUrl": "http://localhost:5213/api/transaction/vnpay_return",
+    "vnp_ReturnUrl": "https://koishop.amayakuro.id.vn/api/transaction/vnpay_return",
     //"vnp_apiUrl": "http://sandbox.vnpayment.vn/merchant_webapi/merchant.html",
     //"vnp_PayUrl": "http://sandbox.vnpayment.vn/paymentv2/vpcpay.html",
     //"vnp_RefundUrl": "http://sandbox.vnpayment.vn/merchant_webapi/merchant.html",
