--- a/appsettings.json
+++ b/appsettings.json
@@ -6,8 +6,8 @@
     }
   },
   "AllowedHosts": "*",
-  "BEUrl": "https://koishop.amayakuro.id.vn/",
-  "FEUrl": "https://swp-391-nine.vercel.app/",
+  "BEUrl": "https://koishop.amayakuro.id.vn",
+  "FEUrl": "https://swp-391-nine.vercel.app",
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Database=KoiFish;User Id=sa;Password=12345;Trusted_Connection=True;TrustServerCertificate=True;"
   },
